--- a/api-gateway/api-gateway.yml
+++ b/api-gateway/api-gateway.yml
@@ -74,7 +74,7 @@ spring:
           jwk-set-uri: ${keycloak-client.server-url}/realms/${keycloak-client.realm}/protocol/openid-connect/certs
 keycloak-client:
   server-url: https://auth-dev.agenadev.com/auth
-  realm: vet-at-home
+  realm: iamai
 management:
   endpoints:
     web:
