--- a/api-gateway/api-gateway-kubernetes.yml
+++ b/api-gateway/api-gateway-kubernetes.yml
@@ -2,7 +2,7 @@ spring:
   cloud:
     gateway:
       routes:
-        - id: userProfilesPrincipal
+        - id: profilesPrincipal
           uri: http://profiles
           predicates:
             - Path=/api/v1/profiles/me
@@ -13,10 +13,6 @@ spring:
           uri: http://profiles
           predicates:
             - Path=/api/v1/profiles/**, /api/v1/description/**
-        - id: questionnaire
-          uri: http://questionnaire
-          predicates:
-            - Path=/api/v1/questions/**, /api/v1/questionnaire/**
         - id: multimedia
           uri: http://multimedia-manager
           predicates:
