--- a/api-gateway/api-gateway-kubernetes.yml
+++ b/api-gateway/api-gateway-kubernetes.yml
@@ -6,7 +6,7 @@ spring:
           uri: http://profiles
           predicates:
             - Path=/api/v1/profiles/me
-            - Method=GET,POST,PATCH,DELETE
+            - Method=GET,PUT,PATCH,DELETE
           filters:
             - AddPrincipalToPathFilter
         - id: profiles
