--- a/api-gateway/api-gateway.yml
+++ b/api-gateway/api-gateway.yml
@@ -29,18 +29,17 @@ spring:
         locator:
           enabled: false
       routes:
-        - id: userProfilesPrincipal
-          uri: http://localhost:8095
+        - id: profilesPrincipal
+          uri: http://localhost:8080
           predicates:
-            - Path=/api/v1/profiles/me, /api/v1/profiles/me/pets, /api/v1/service/**
-            - Method=GET,PUT,POST,PATCH,DELETE
+            - Path=/api/v1/profiles/me
+            - Method=GET,PUT,PATCH,DELETE
           filters:
             - AddPrincipalToPathFilter
         - id: profiles
-          uri: http://localhost:8095
+          uri: http://localhost:8080
           predicates:
-            - Path=/api/v1/pets, /api/v1/pets/**, /api/v1/petprofiles/**, /api/v1/profiles/**
-            - Method=GET,PUT,PATCH,DELETE
+            - Path=/api/v1/profiles/*/*, /api/v1/description/**, /api/v1/profiles/api-doc
         - id: multimedia
           uri: http://localhost:8097
           predicates:
