--- a/api-gateway/api-gateway.yml
+++ b/api-gateway/api-gateway.yml
@@ -8,10 +8,10 @@ security-constraints:
     - /webjars/swagger-ui/**
     - /swagger-ui**
     - /v3/api-docs/**
-  admin-uri:
-    - /api/v1/profiles/search/**
-  admin-roles:
-    - iamai-admin
+#  admin-uri:
+#    - /api/v1/profiles/search/**
+#  admin-roles:
+#    - iamai-admin
 spring:
   cloud:
     gateway:
@@ -40,6 +40,12 @@ spring:
           uri: http://localhost:8080
           predicates:
             - Path=/api/v1/profiles/*/*, /api/v1/description/**, /api/v1/profiles/api-doc
+        - id: adminSearch
+          uri: http://localhost:8080
+          predicates:
+            - Path=/api/v1/profiles/search/**
+          metadata:
+            auth-roles: iamai-admin
         - id: multimedia
           uri: http://localhost:8097
           predicates:
