--- a/api-gateway/api-gateway.yml
+++ b/api-gateway/api-gateway.yml
@@ -39,14 +39,13 @@ spring:
         - id: profiles
           uri: http://localhost:8080
           predicates:
-#            - Path=/api/v1/profiles/*/*, /api/v1/description/**, /api/v1/profiles/api-doc
-             - Path=/api/v1/description/**, /api/v1/profiles/api-doc
+            - Path=/api/v1/profiles/*/*, /api/v1/description/**, /api/v1/profiles/api-doc
         - id: adminSearch
           uri: http://localhost:8080
           predicates:
             - Path=/api/v1/profiles/search/**
           metadata:
-            auth-roles: iamai-admin
+            auth-roles: iamai-admin, test-polka
         - id: multimedia
           uri: http://localhost:8097
           predicates:
