--- a/api-gateway/api-gateway-kubernetes.yml
+++ b/api-gateway/api-gateway-kubernetes.yml
@@ -13,6 +13,13 @@ spring:
           uri: http://profiles
           predicates:
             - Path=/api/v1/profiles/*/*, /api/v1/description/**, /api/v1/profiles/api-doc
+        - id: adminSearch
+          uri: http://localhost:8080
+          predicates:
+            - Path=/api/v1/profiles/search/**
+          metadata:
+            auth-roles:
+              - iamai-admin
         - id: multimedia
           uri: http://multimedia-manager
           predicates:
