--- a/api-gateway/api-gateway.yml
+++ b/api-gateway/api-gateway.yml
@@ -40,10 +40,16 @@ spring:
           uri: http://localhost:8080
           predicates:
             - Path=/api/v1/profiles/search/**, /api/v1/testme/test/**
+            - Query=projection, admin-search-profile
           metadata:
             auth-roles:
             - iamai-admin
             - test-polka
+        - id: PublicSearch
+          uri: http://localhost:8080
+          predicates:
+            - Path=/api/v1/profiles/search/**
+            - Query=projection, public-search-profile
         - id: multimedia
           uri: http://localhost:8097
           predicates:
