--- a/api-gateway/api-gateway.yml
+++ b/api-gateway/api-gateway.yml
@@ -40,6 +40,7 @@ spring:
           uri: http://localhost:8080
           predicates:
             - Path=/api/v1/profiles/search/**, /api/v1/testme/test/**
+            - Query=projection, admin-search-profile
           metadata:
             auth-roles:
             - iamai-admin
