--- a/api-gateway/api-gateway.yml
+++ b/api-gateway/api-gateway.yml
@@ -37,19 +37,19 @@ spring:
           predicates:
             - Path=/api/v1/profiles/search/**
             - Query=projection, public-search-profile
+        - id: adminSearch
+          uri: http://localhost:8080
+          predicates:
+            - Path=/api/v1/profiles/search/**
+            - Query=projection, admin-search-profile
+          metadata:
+            auth-roles:
+              - iamai-admin
+              - test-polka
         - id: profiles
           uri: http://localhost:8080
           predicates:
             - Path=/api/v1/profiles/*/*, /api/v1/description/**, /api/v1/profiles/api-doc
-#        - id: adminSearch
-#          uri: http://localhost:8080
-#          predicates:
-#            - Path=/api/v1/profiles/admin/search/**, /api/v1/testme/test/**
-#            - Query=projection, admin-search-profile
-#          metadata:
-#            auth-roles:
-#            - iamai-admin
-#            - test-polka
         - id: multimedia
           uri: http://localhost:8097
           predicates:
