--- a/api-gateway/api-gateway-kubernetes.yml
+++ b/api-gateway/api-gateway-kubernetes.yml
@@ -25,6 +25,12 @@ spring:
             - Query=projection, admin-search-profile
           filters:
             - SetStatus=403
+        - id: GeneralSearchDeny
+          uri: no://op
+          predicates:
+            - Path=/api/v1/profiles/search/**
+          filters:
+            - SetStatus=403
         - id: multimedia
           uri: http://multimedia-manager
           predicates:
