--- a/api-gateway/api-gateway.yml
+++ b/api-gateway/api-gateway.yml
@@ -37,7 +37,7 @@ spring:
           predicates:
             - Path=/api/v1/profiles/search/**
             - Query=projection, public-search-profile
-        - id: AdminSearch1
+        - id: AdminSearch
           uri: http://localhost:8081
           predicates:
             - Path=/api/v1/profiles/search/**
@@ -73,7 +73,6 @@ spring:
               - iamai-admin
           filters:
             - RewritePath=/api/v1/profiles/admin/search/(?<path>.*), /api/v1/profiles/search//$\{path}
-            - AddRequestParameter=projection, admin-search-profile
   security:
     oauth2:
       client:
