--- a/api-gateway/api-gateway-kubernetes.yml
+++ b/api-gateway/api-gateway-kubernetes.yml
@@ -14,6 +14,13 @@ spring:
           predicates:
             - Path=/api/v1/profiles/search/**
             - Query=projection, public-search-profile
+        - id: AdminSearch
+          uri: http://api-gateway
+          predicates:
+            - Path=/api/v1/profiles/search/**
+            - Query=projection, admin-search-profile
+          filters:
+            - RewritePath=/api/v1/profiles/search/(?<path>.*), /api/v1/profiles/admin/search//$\{path}
         - id: GeneralSearchDeny
           uri: no://op
           predicates:
@@ -34,7 +41,7 @@ spring:
             - Path=/v3/api-docs/**
           filters:
             - RewritePath=/v3/api-docs/(?<path>.*), /api/v1//$\{path}/api-doc
-        - id: adminSearch
+        - id: adminSearchDownstream
           uri: http://profiles
           predicates:
             - Path=/api/v1/profiles/admin/search/**
@@ -43,6 +50,5 @@ spring:
               - iamai-admin
           filters:
             - RewritePath=/api/v1/profiles/admin/search/(?<path>.*), /api/v1/profiles/search//$\{path}
-            - AddRequestParameter=projection, admin-search-profile
 keycloak-client:
   server-url: https://auth-dev.agenadev.com/auth
