--- a/api-gateway/api-gateway-kubernetes.yml
+++ b/api-gateway/api-gateway-kubernetes.yml
@@ -22,17 +22,11 @@ spring:
             - Query=projection, admin-search-profile
             - Query=isOpenForWork, true
           filters:
-            - RewritePath=/api/v1/profiles/(?<path>.*), /api/v1/profiles/admin/search//$\{path}
-        - id: GeneralSearchDeny
-          uri: no://op
-          predicates:
-            - Path=/api/v1/profiles/search/**
-          filters:
-            - SetStatus=403
+            - RewritePath=/api/v1/(?<path>.*), /api/v1/admin//$\{path}
         - id: profiles
           uri: http://profiles
           predicates:
-            - Path=/api/v1/profiles/*/*, /api/v1/description/**, /api/v1/profiles/api-doc, /api/v1/count/**
+            - Path=/api/v1/profiles/*/*, /api/v1/description/**, /api/v1/profiles/api-doc
         - id: multimedia
           uri: http://multimedia-manager
           predicates:
@@ -46,11 +40,11 @@ spring:
         - id: adminSearchDownstream
           uri: http://profiles
           predicates:
-            - Path=/api/v1/profiles/admin/search/**
+            - Path=/api/v1/admin/**
           metadata:
             auth-roles:
               - iamai-admin
           filters:
-            - RewritePath=/api/v1/profiles/admin/search/(?<path>.*), /api/v1/profiles//$\{path}
+            - RewritePath=/api/v1/admin/(?<path>.*), /api/v1//$\{path}
 keycloak-client:
   server-url: https://auth-dev.agenadev.com/auth
