--- a/api-gateway/api-gateway.yml
+++ b/api-gateway/api-gateway.yml
@@ -105,3 +105,6 @@ logging:
     reactor.netty.http.client: DEBUG
 springdoc:
   packagesToScan: com.agenatech
+health:
+  config:
+    enabled: false
