--- a/questionnaire/questionnaire.yml
+++ b/questionnaire/questionnaire.yml
@@ -25,5 +25,8 @@ springdoc.api-docs.path: /api/v1/questionnaire/api-doc
 management.endpoints.web.exposure.include: '*'
 logging.level:
     com.agenatech: DEBUG
+health:
+  config:
+    enabled: false
 
 
