--- a/api-gateway/api-gateway.yml
+++ b/api-gateway/api-gateway.yml
@@ -11,6 +11,9 @@ security-constraints:
 spring:
   cloud:
     gateway:
+      httpclient:
+        connect-timeout: 3000
+        response-timeout: 5s
       forwarded:
         enabled: true
       x-forwarded:
