--- a/api-gateway/api-gateway-kubernetes.yml
+++ b/api-gateway/api-gateway-kubernetes.yml
@@ -5,7 +5,7 @@ spring:
         - id: profilesPrincipal
           uri: http://profiles
           predicates:
-            - Path=/api/v1/profiles/me
+            - Path=/api/v1/profiles/me, /api/v1/profiles/me/**
             - Method=GET,PUT,PATCH,DELETE
           filters:
             - AddPrincipalToPathFilter
