--- a/api-gateway/api-gateway.yml
+++ b/api-gateway/api-gateway.yml
@@ -53,7 +53,7 @@ spring:
         - id: profiles
           uri: http://localhost:8080
           predicates:
-            - Path=/api/v1/profiles/*/*, /api/v1/description/**, /api/v1/profiles/api-doc
+            - Path=/api/v1/profiles/*/*, /api/v1/description/**, /api/v1/profiles/api-doc, /api/v1/profile/profiles
         - id: multimedia
           uri: http://localhost:8097
           predicates:
