--- a/api-gateway/api-gateway-kubernetes.yml
+++ b/api-gateway/api-gateway-kubernetes.yml
@@ -46,5 +46,6 @@ spring:
               - iamai-admin
           filters:
             - RewritePath=/api/v1/admin/(?<path>.*), /api/v1//$\{path}
+#  todo set Keycloak prod url
 keycloak-client:
   server-url: https://auth-dev.agenadev.com/auth
