--- a/api-gateway/api-gateway.yml
+++ b/api-gateway/api-gateway.yml
@@ -25,6 +25,7 @@ spring:
         prefixEnabled: true
       default-filters:
         - TokenRelay
+        - AddResponseHeader=Access-Control-Allow-Origin, https://vetathome.se
       discovery:
         locator:
           enabled: false
