--- a/ats-profiles/ats-profiles.yml
+++ b/ats-profiles/ats-profiles.yml
@@ -9,7 +9,7 @@ spring:
   jpa:
     properties:
       hibernate:
-        generate_statistics: true
+        generate_statistics: false
         cache:
           use_second_level_cache: true
           region.factory_class: org.hibernate.cache.ehcache.EhCacheRegionFactory
@@ -29,7 +29,7 @@ management:
 springdoc.api-docs.path: /api/v1/profiles/api-doc
 logging:
   level:
-    com.agenatech: DEBUG
+    com.agenatech: INFO
 health:
   config:
     enabled: false
